<resources>
    <string name="app_name">Pharmecy Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">parvez</string>
    <string name="nav_header_subtitle">shajahan46083@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_tools">View Staff</string>
    <string name="menu_share">Add Company</string>

    <string name="add_medicine">Add Medicine</string>
    <string name="sale_medicine">Sale Medicine</string>
    <string name="view_stok">View Stok</string>
    <string name="view_sales">View Sales </string>
    <string name="delete_item">Delete Item</string>


    <string name="add_staff">Add Staff</string>
    <string name="view_staff">View Staff</string>
    <string name="salary_staff">Staff Salary</string>
    <string name="modify_staff">Modify Staff</string>


    <string name="view_company">View Company</string>
    <string name="add_company">Add Company</string>
    <string name="modify_compoany">Modify Company</string>
    <string name="delete_company">Delete Company</string>


    <string name="sale">Sale</string>
    <string name="view_sale">View Sale</string>
    <string name="title_activity_main2">Main2Activity</string>


    <string name="country_prompt">Select a Medicine Catagories</string>
    <string-array name="country_arrays">
        <item>Antibiotics</item>
        <item>Antiseptics</item>
        <item>Paracetamol </item>
        <item>Italy</item>
        <item>Singapore</item>
    </string-array>
    <string name="title_activity_main_signup">MainActivity_signup</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
